--- a/README.org
+++ b/README.org
@@ -15,16 +15,30 @@ $ ln -s dotspacemacs/.spacemacs .
 #+END_SRC
 
 * Contents
-** cscope
-Support c/c++ and python modes. Script indexers can be found at
-=mycontribs/ttk-cscope/local/xcscope/=. Modify them according to your code structure. 
+** cscope layer (ttk-cscope)
+   Support c/c++ and python projects, enable via =ttk-cscope=. First, install these
+   for generating cscope database:
 
-My preference is to invoke the indexer at the root directory of your source tree from the 
-command line. Include the script's path into your ${PATH} then:
+   For c/c++:
+   : $ apt-get install cscope
 
-#+BEGIN_SRC text
-$ cscope-indexer -r -v
-#+END_SRC
+   For python:
+   : $ apt-get install pycscope
+
+   Script indexers to select which c/c++ or python files to be indexed is available
+   at =mycontribs/ttk-cscope/local/xcscope/=. Modify them according to your needs.
+
+   My preference is to invoke the indexer at the root directory of your source tree
+   from the command line. Hence, include the script's path into your =PATH= then:
+
+   For c/c++:
+   : $ cscope-indexer -r -v
+
+   For python:
+   : $ pycscope-indexer -r -v
+
+   You need to invoke the indexer again if your codes got (many) changes. Well, that's
+   all. It's now ready to roll.
 
 *** Keybindings:
 In c/c++ mode or python mode, place the cursor on function name or macro of your interest:
@@ -66,13 +80,14 @@ In cscope buffer, here's available commands:
    "u"      'cscope-pop-mark
 #+END_SRC
 
-** elpy
-   Support python environment, some say it's behemoth :) It's off by default, if you want
-   it you need to enable it in =dotspacemacs-configuration-layers= '(=ttk-elpy=). And make
+** elpy layer (ttk-elpy)
+   Support python environment, enable via =dotspacemacs-configuration-layers= '(=ttk-elpy=). And make
    sure you don't enable =python= layer it it.
 
+   This is practically dinosaur of pycscope :) Don't worry, they can co-exist peacefully.
+
    Couple of things need to setup by you before you can enjoy elpy. First of all, install
-   python virtual environment. And some other packages that elpy depending on.
+   python virtual environment. And some other packages that elpy is depending on.
 
 *** Python Select
     Put this in your =.bashrc= on how to select python 2 or 3 (or any other python versions in
@@ -134,4 +149,5 @@ In cscope buffer, here's available commands:
       : M-x pyvenv-workon elpy3
       : M-x elpy-config
 
-    Now it's ready. Always do =M-x pyvenv-workon elpy3= (or any venv you are working on).
+    It's now ready. Always do =M-x pyvenv-workon elpy3= (or any venv you are working on) before
+    you open any python project.
