--- a/README.org
+++ b/README.org
@@ -126,50 +126,78 @@
     - List available versions
       : $ port select --list python
       : $ port select --list pip
-
+*** Activate either python and pip 2.7 or 3.6
+    Example is activating python and pip 3.6
+      : $ sudo port select --set python python36
+      : $ sudo port select --set python3 python36
+      : $ sudo port select --set pip pip36
 *** Install virtual environment
     * virtualenv
       : $ sudo pip install virtualenv
     * virtualenvwrapper
       : $ sudo pip install virtualenvwrapper
-
 *** Python Select
     Put this in your =.bashrc= on how to select python 2 or 3 (or any other python
     versions in that matter):
 
     #+BEGIN_SRC bashrc
-    # sudo apt-get install python-pip
-    # sudo pip install virtualenvwrapper
-    function select_python2() {
-        # update prompt
-        export PS1="(py2)${PS1}"
+    function select_python27() {
+        if [ -d "/opt/local/Library/Frameworks/Python.framework/Versions/2.7/bin" ] ; then
+            echo "Setting env for system python 2.7 macport."
+            # add virtualenv executable into system path
+            OLD_PATH=${PATH}
+            export PATH="/opt/local/Library/Frameworks/Python.framework/Versions/2.7/bin":${OLD_PATH}
+            ### update prompt
+            export PS1="(py27)${PS1}"
+        else
+            echo "Python 2.7 macport is not installed!!!"
+        fi
         #
-        export WORKON_HOME=${HOME}/.virtenv2
-        export PIP_VIRTUALENV_BASE=${WORKON_HOME}
-        export PIP_RESPECT_VIRTUALENV=true
-        export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python
-        source /usr/local/bin/virtualenvwrapper.sh
+        if [ -f /opt/local/Library/Frameworks/Python.framework/Versions/2.7/bin/virtualenvwrapper.sh ] ; then
+            export WORKON_HOME=${HOME}/.virtenv27
+            export PIP_VIRTUALENV_BASE=${WORKON_HOME}
+            export PIP_RESPECT_VIRTUALENV=true
+            export VIRTUALENVWRAPPER_PYTHON=/opt/local/bin/python2.7
+            source /opt/local/Library/Frameworks/Python.framework/Versions/2.7/bin/virtualenvwrapper.sh
+        else
+            echo "Virtualenv is not installed!!!"
+        fi
     }
-    export -f select_python2
-    # sudo apt-get install python3-pip
-    # sudo pip3 install virtualenvwrapper
-    function select_python3() {
-        # update prompt
-        export PS1="(py3)${PS1}"
+    export -f select_python27
+    #
+    # python 36
+    #
+    function select_python36() {
+        if [ -d "/opt/local/Library/Frameworks/Python.framework/Versions/3.6/bin" ] ; then
+            echo "Setting env for system python 3.6 macport."
+            # add virtualenv executable into system path
+            OLD_PATH=${PATH}
+            export PATH="/opt/local/Library/Frameworks/Python.framework/Versions/3.6/bin":${OLD_PATH}
+            ### update prompt
+            export PS1="(py36) ${PS1}"
+        else
+            echo "Python 3.6 macport is not installed!!!"
+        fi
         #
-        export WORKON_HOME=${HOME}/.virtenv3
-        export PIP_VIRTUALENV_BASE=${WORKON_HOME}
-        export PIP_RESPECT_VIRTUALENV=true
-        export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3
-        source /usr/local/bin/virtualenvwrapper.sh
+        if [ -f /opt/local/Library/Frameworks/Python.framework/Versions/3.6/bin/virtualenvwrapper.sh ] ; then
+            export WORKON_HOME=${HOME}/.virtenv36
+            export PIP_VIRTUALENV_BASE=${WORKON_HOME}
+            export PIP_RESPECT_VIRTUALENV=true
+            export VIRTUALENVWRAPPER_PYTHON=/opt/local/bin/python3.6
+            source /opt/local/Library/Frameworks/Python.framework/Versions/3.6/bin/virtualenvwrapper.sh
+        else
+            echo "Virtualenv is not installed!!!"
+        fi
     }
-    export -f select_python3
+    export -f select_python36
     #+END_SRC
 
     Then you need to source it to take effect:
     : $ source ~/.bashrc
 
-
+    And finally select python 3.6 environment to be consistent with the activating
+    python and pip 3.6 earlier:
+    : $ select_python36
 *** Python Virtual Environment
     - Create python virtualenv
       : $ mkvirtualenv elpy
@@ -189,6 +217,11 @@
 
     It's now ready. Always do =M-x pyvenv-workon elpy= (or any venv you are working
     on) before you open any python project.
+*** Chech which python and pip is currently active
+    : $ which python
+    : /Users/joe/.virtenv36/elpy/bin/python
+    : $ which pip
+    : /Users/joe/.virtenv36/elpy/bin/pip
 *** Keybindings
     In python mode, place the cursor on function name or macro of your interest:
 
